# small_projects

CSC_417_Final/: interp-instructions.txt  interpA.scm  interpB.scm  interpC.scm  interpE.scm
bashProjects/guessingGame/: guessingGame.sh
chrome_exten/focus-mode/: background.js  manifest.json
chrome_exten/reading-time/: manifest.json
chrome_exten/tabs-manager/: manifest.json  popup.js
clone_clean/: clone-clean.sh
go_network/tcp_client/: client  go.mod
go_network/tcp_server/: go.mod  server
go_network/udp_server/: go.mod  server.go
ns3_docker/: dockerfile  setup.sh
scoping_practice/: scoping  scoping.c  scoping.sh
web-rust/hello-wasm/: Cargo.toml
web-rust/wasm-game-of-life/: Cargo.toml  LICENSE_MIT
web-rust/wasm-game-of-life/src/: lib.rs
