[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Kiran <klrao@ncsu.edu>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/krao2099/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

